apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__model_picker_idle_search_shows_placeholder.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ┌ Models  Local · Your key · Managed ──────────────────────────────────────┐  "
"  │/ type to filter by name or provider...                                   │  "
"  │──────────────────────────────────────────────────────────────────────────│  "
"  │Bring your own key · your own provider keys                               │  "
"  │  Anthropic                                                               │  "
"  │  ● Fixture Flagship                    Balanced      200K ctx            │  "
"  │    Fixture Balanced                    Balanced      200K ctx            │  "
"  │  OpenAI                                                                  │  "
"  │    Fixture Fast                        Balanced      128K ctx            │  "
"  │                                                                          │  "
"  │ Thinking: on · Effort: ◀ Medium ▶   Tab/←→                               │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
