apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__model_picker_search_active_filters_list.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ┌ Models  Local · Your key · Managed ──────────────────────────────────────┐  "
"  │/ open                                                                    │  "
"  │Bring your own key · your own provider keys                               │  "
"  │  OpenAI                                                                  │  "
"  │    Fixture Fast                        Balanced      128K ctx            │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
