apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_keybindings_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────
  Keybindings

    Global
      Ctrl+C       Cancel current turn / interrupt
      Ctrl+D       Exit AGI
      Ctrl+L       Redraw the screen (preserve session)
      Tab          Toggle plan mode
      Shift+Tab    Cycle plan / accept / reject

    Slash palette
      /            Open palette
      ↑/↓          Navigate commands
      Enter        Run selected command
      Tab          Fill the composer without running
      Esc          Close palette
      type         Filter commands

    Overlays
      ←/→          Switch tabs
      ↑/↓          Navigate items
      Enter        Confirm / open detail
      Esc          Close overlay

    Editor
      Ctrl+E       Open external editor for current input
      Enter        Send message
      Ctrl+J       Insert newline (multiline)
      Shift+Enter  Insert newline, where the terminal sends it
      Ctrl+U       Delete to line start

  Esc to close
