apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_mcp_list_empty_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────
  Manage MCP servers

  0 servers

  ※ Run `agi --debug` to see error logs
  https://agiworkforce.com/integrations for help

  ↑↓ to navigate · Enter to confirm · Esc to cancel
