apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_sandbox_contained_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Sandbox

    Mode:    contained

    Allowed: read-only ops + write_file & edit_file (with confirmation), run_command (with confirmation)
    Blocked: apply_patch without confirmation, raw shell beyond cwd

    Set via:     --permission-mode <auto|approve|skip> at startup
                 or --no-sandbox to disable OS-level sandbox
    Enforced by: agiworkforce-sandbox-policy (macOS Seatbelt / bwrap)

  Esc to close
