apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_skills_empty_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Skills

  No skills found.
  Create skills in .agiworkforce/skills/ or ~/.agiworkforce/skills/.

  ↑↓ navigate · Enter select · Esc close
