apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_tasks_empty_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────
  Background tasks

  No tasks currently running

  ↑/↓ to select · Enter to view · ←/Esc to close
