apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__render_usage_default_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────
  Usage

  Session estimate (priced locally, not the billed figure)
    Input tokens:                0
    Output tokens:               0
    Cache read tokens:           0
    Cache write tokens:          0
    Estimated credits:   0 credits
    Turn count:                  0
    Model:               

  Tip: see https://agiworkforce.com/pricing for plan details.

  Esc to close
