apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__slash_palette_empty_filter_all_commands_baseline.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
┌─ Commands ─────────────────────────────────────────────────┐
│   /                                                        │
│ ────────────────────────────────────────────────────────── │
│ ❯ /plan — Switch to plan mode                              │
│   /model — Choose model and reasoning effort               │
│   /resume — Resume a saved chat                            │
│   /theme — Choose a syntax highlighting theme              │
│                                                            │
│  Type to filter   ↑↓ navigate   Enter select   Esc cancel  │
└────────────────────────────────────────────────────────────┘
