apps/cli/src/tui/widgets/snapshots/agiworkforce_cli__tui__widgets__snapshot_smoke__slash_palette_filter_narrows_to_resume.snap
---
source: apps/cli/src/tui/widgets/snapshot_smoke.rs
expression: rendered
---
┌─ Commands ─────────────────────────────────────────────────┐
│   /resu                                                    │
│ ──────────────────────────────────────────────────────────  │
│ ❯ /resume — Continue a previous session                    │
│                                                            │
│  Type to filter   ↑↓ navigate   Enter select   Esc cancel  │
└────────────────────────────────────────────────────────────┘
